--- a/Vending_Transactions/models/staging/__sources.yml
+++ b/Vending_Transactions/models/staging/__sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: vending_machine_dbt_db
     description: 'Raw source data for vending machine transactions and related feedback.'
-    database: INSTRUCTOR1_vending_machine_dbt_db
+    database: [LOGIN]_vending_machine_dbt_db
     schema: RAW
     tables:
       - name: VENDING_TRANSACTIONS
